tests/invalid/str_split_wrong_arg_type/main.py
def run_case() -> None:
    s: str = "1,2,3"
    out: list[str] = s.split(1)
    print(out)


if __name__ == "__main__":
    run_case()
